[package]
name = "light-cache"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Async focused caching library"
repository = "https://github.com/nhtyy/light-cache"

[dependencies]
pin-project = "1.1.5"
hashbrown = { version = "0.14", default-features = false, features = ["raw", "ahash"] }
tracing = "0.1.40"
priority-queue = "2.1.0"

[dev-dependencies]
quick_cache = "0.6.2"
moka = { version = "0.12.8", features = ["future"] }
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }

[[bench]]
name = "light_cache"
harness = false

[[bench]]
name = "quick_cache"
harness = false
